renamed:    examples/standard/system.cpp -> src/system.cpp

--- a/bolt/Makefile
+++ b/bolt/Makefile
@@ -104,6 +104,7 @@ standard_config:
 	ln -sf $(HOME)/.arduino15/packages/STMicroelectronics/ vendor
 	ln -sf $(ARDUINO_LIBS)/vl53l1x-arduino vendor
 	cp $(HACKFLIGHT)/src/control/standard.hpp $(HACKFLIGHT)/src/control.hpp
+	cp $(HACKFLIGHT)/src/system.cpp $(HACKFLIGHT)/bolt/src/
 	cp $(HACKFLIGHT)/bolt/src/Kbuild.standard $(HACKFLIGHT)/bolt/src/Kbuild
 	cd $(HACKFLIGHT)/msppg; make install; cd ..
 
@@ -113,6 +114,7 @@ haskell_config:
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
 	mv copilot_core.c $(HACKFLIGHT)/bolt/src/copilot_core.cpp
 	mv copilot*.h $(HACKFLIGHT)/bolt/src/
+	cp $(HACKFLIGHT)/src/system.cpp $(HACKFLIGHT)/bolt/src/
 	cp $(HACKFLIGHT)/src/control/haskell.hpp $(HACKFLIGHT)/src/control.hpp
 	cp $(HACKFLIGHT)/bolt/src/Kbuild.haskell $(HACKFLIGHT)/bolt/src/Kbuild
 	cd $(HACKFLIGHT)/msppg; make install; cd ..
