--- a/webots/plugins/physics/haskell/Makefile
+++ b/webots/plugins/physics/haskell/Makefile
@@ -25,12 +25,12 @@ HASKDIR = ../../../../haskell
 
 CXX_SOURCES = ../support.cpp copilot_core.cpp 
 
-FILES_TO_REMOVE += copilot* control.hpp
+FILES_TO_REMOVE += copilot* sim_control.hpp
 
 all: libhaskell.so
 
 copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
-	cp $(SRC)/control/haskell.hpp ./control.hpp
+	cp $(SRC)/control/haskell.hpp ./sim_control.hpp
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
 	mv copilot_core.c copilot_core.cpp
 
