--- a/webots/plugins/physics/snn/Makefile
+++ b/webots/plugins/physics/snn/Makefile
@@ -21,6 +21,8 @@ INCLUDE = -I../../../simsrc -I../../../../src
 
 CXX_SOURCES = ../support.cpp
 
+FILES_TO_REMOVE += sim_control.hpp
+
 # TeNNLab framework stuff ----------------------------------------------------
 
 ROOT = $(HOME)/Desktop
