modified:   btserver.cpp

--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -27,11 +27,11 @@ NETWORK = difference_risp_train.txt
 INCLUDE = -I$(ROOT) -I../src
 
 standard: btserver.cpp $(ROOT)/posix-utils/*.hpp ../src/msp/*.hpp ../src/msp/messages.h
-	g++ $(INCLUDE) -O3 -Wall btserver.cpp -o btserver
+	g++ -Wall $(INCLUDE) -O3 -Wall btserver.cpp -o btserver
 
 # Just encoder for now (full monty would use libframework.a)
 snn: btserver.cpp $(ROOT)/posix-utils/*.hpp ../src/msp/*.hpp ../src/msp/messages.h difference_risp_train.hpp
-	g++ $(INCLUDE) -I$(EDIR)/src -D_SNN -I../src -O3 -Wall btserver.cpp -o btserver
+	g++ -Wall $(INCLUDE) -I$(EDIR)/src -D_SNN -I../src -O3 -Wall btserver.cpp -o btserver
 
 difference_risp_train.hpp: 
 	$(EDIR)/compiler.py $(FDIR)/networks/$(NETWORK)
