new file:   testsnn.cpp

--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -38,8 +38,16 @@ new: newsnn.o io_stream.o jspace.o network.o properties.o spike_encoding.o \
 	g++ -Wall $(INCLUDE) -o btserver -O3 newsnn.o io_stream.o jspace.o \
 		network.o properties.o spike_encoding.o processor.o static_proc.o
 
+test: testsnn.o io_stream.o jspace.o network.o properties.o spike_encoding.o \
+	processor.o static_proc.o
+	g++ -Wall $(INCLUDE) -o btserver -O3 testsnn.o io_stream.o jspace.o \
+		network.o properties.o spike_encoding.o processor.o static_proc.o
+
 newsnn.o: newsnn.cpp
 	g++ -Wall $(INCLUDE) -c -O3 newsnn.cpp
+
+testsnn.o: testsnn.cpp
+	g++ -Wall $(INCLUDE) -c -O3 testsnn.cpp
 
 io_stream.o:
 	g++ -Wall $(INCLUDE) -c -O3 $(FDIR)/src/io_stream.cpp
