renamed:    processor_tool.cpp -> difference_risp.cpp

--- a/webots/plugins/physics/newsnn/Makefile
+++ b/webots/plugins/physics/newsnn/Makefile
@@ -11,10 +11,10 @@ FR_OBJ = obj/framework.o obj/processor_help.o obj/properties.o
 RISP_INC = $(FRO)/include/risp.hpp
 RISP_OBJ = obj/risp.o obj/risp_static.o
 
-all: processor_tool_risp
+all: difference_risp
 
-processor_tool_risp: processor_tool.cpp $(FR_INC) $(RISP_INC) $(RISP_OBJ) $(FR_OBJ)
-	$(CXX) $(FR_CFLAGS) -o processor_tool_risp processor_tool.cpp $(RISP_OBJ) $(FR_OBJ)
+difference_risp: difference_risp.cpp $(FR_INC) $(RISP_INC) $(RISP_OBJ) $(FR_OBJ)
+	$(CXX) $(FR_CFLAGS) -o difference_risp difference_risp.cpp $(RISP_OBJ) $(FR_OBJ)
 
 obj/risp.o: $(FRO)/src/risp.cpp $(FR_INC) $(RISP_INC)
 	$(CXX) -c $(FR_CFLAGS) -o obj/risp.o $(FRO)/src/risp.cpp
@@ -32,9 +32,9 @@ obj/properties.o: $(FRO)/src/properties.cpp $(FR_INC)
 	$(CXX) -c $(FR_CFLAGS) -o obj/properties.o $(FRO)/src/properties.cpp
 
 edit:
-	vim processor_tool.cpp
+	vim difference.cpp
 
 clean:
-	rm -f processor_tool_risp obj/*
+	rm -f difference_risp obj/*
 
 
