--- a/webots/plugins/physics/newsnn/Makefile
+++ b/webots/plugins/physics/newsnn/Makefile
@@ -1,3 +1,5 @@
+NAME = difference_risp
+
 FRO = $(HOME)/Desktop/framework-open
 
 CXX ?= g++
@@ -13,8 +15,8 @@ RISP_OBJ = obj/risp.o obj/risp_static.o
 
 all: difference_risp
 
-difference_risp: difference_risp.cpp $(FR_INC) $(RISP_INC) $(RISP_OBJ) $(FR_OBJ)
-	$(CXX) $(FR_CFLAGS) -o difference_risp difference_risp.cpp $(RISP_OBJ) $(FR_OBJ)
+$(NAME): $(NAME).cpp $(FR_INC) $(RISP_INC) $(RISP_OBJ) $(FR_OBJ)
+	$(CXX) $(FR_CFLAGS) -o $(NAME) $(NAME).cpp $(RISP_OBJ) $(FR_OBJ)
 
 obj/risp.o: $(FRO)/src/risp.cpp $(FR_INC) $(RISP_INC)
 	$(CXX) -c $(FR_CFLAGS) -o obj/risp.o $(FRO)/src/risp.cpp
@@ -31,10 +33,13 @@ obj/processor_help.o: $(FRO)/src/processor_help.cpp $(FR_INC)
 obj/properties.o: $(FRO)/src/properties.cpp $(FR_INC)
 	$(CXX) -c $(FR_CFLAGS) -o obj/properties.o $(FRO)/src/properties.cpp
 
+run:
+	./$(NAME) 1 0.55 1000
+
 edit:
-	vim difference.cpp
+	vim $(NAME).cpp
 
 clean:
-	rm -f difference_risp obj/*
+	rm -f $(NAME) obj/*
 
 
