--- a/webots/plugins/physics/newsnn/Makefile
+++ b/webots/plugins/physics/newsnn/Makefile
@@ -34,7 +34,7 @@ obj/properties.o: $(FRO)/src/properties.cpp $(FR_INC)
 	$(CXX) -c $(FR_CFLAGS) -o obj/properties.o $(FRO)/src/properties.cpp
 
 run: $(NAME)
-	./$(NAME) 1 0.55
+	./$(NAME)
 
 edit:
 	vim $(NAME).cpp
