Begin socket support for SNN

--- a/webots/plugins/physics/snn/Makefile
+++ b/webots/plugins/physics/snn/Makefile
@@ -16,13 +16,15 @@
 
 SRC = ../../../../src
 
+ROOT = $(HOME)/Desktop
+
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 INCLUDE = -I$(SRC)
 
 CXX_SOURCES = ../support.cpp
 
-INCLUDE = -I../../../simsrc -I../../../../src
+INCLUDE = -I../../../simsrc -I../../../../src -I$(ROOT)
 
 # TeNNLab framework stuff ------------------------------ ----------------------
 
