--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -70,8 +70,11 @@ runsnnviz:
 	sleep 1
 	cd $(VIZ_DIR); \
  	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
-     	-n $(NET) --show_spike_count --remove_unnecessary_neuron \
-    		--set_num_screen_shot 0 > /dev/null
+     	-n $(NET) --show_spike_count --set_num_screen_shot 0 \
+		--use_name_neuron \
+		'{"0":"I1","1":"I2","2":"S","3":"D1","4":"D2","5":"O","6":"S2"}' \
+		--set_font_size 16 \
+		> /dev/null
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
