--- a/webots/plugins/physics/snn/Makefile
+++ b/webots/plugins/physics/snn/Makefile
@@ -16,15 +16,13 @@
 
 SRC = ../../../../src
 
-ROOT = $(HOME)/Desktop
-
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 INCLUDE = -I$(SRC)
 
 CXX_SOURCES = ../support.cpp
 
-INCLUDE = -I../../../simsrc -I../../../../src -I$(ROOT)
+INCLUDE = -I../../../simsrc -I../../../../src -I$(HOME)/Desktop
 
 # TeNNLab framework stuff ------------------------------ ----------------------
 
