--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -14,13 +14,13 @@
 
 # TeNNLab framework stuff ----------------------------------------------------
 
-FRO = $(HOME)/Desktop/framework-open
+ROOT = $(HOME)/Desktop
 
-DDIR = $(HOME)/Desktop/2025-diff-network
+FRO = $(ROOT)/framework-open
 
-NET = $(DDIR)/diff_net.txt
+NET = $(ROOT)/embedded-neuromorphic/networks/risp/difference_plank.txt
 
-VIZ_DIR = $(HOME)/Desktop/framework/viz
+VIZ_DIR = $(ROOT)/framework/viz
 
 VIZ_PORT = 8100
 
@@ -55,19 +55,19 @@ runhaskell:
 	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
 
 runsnn:
-	sh $(DDIR)/scripts/diff_network.sh 1000 $(FRO) > $(NET)
 	cp ../../plugins/physics/snn/libsnn.so \
 		../../plugins/physics/custom/libcustom.so
 	webots ../../worlds/simple.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(NAME) &
-	sleep 1
-	cd $(VIZ_DIR); \
- 	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
-     	-n $(NET) --show_spike_count --set_num_screen_shot 0 \
-		--use_name_neuron \
-		'{"0":"I1","1":"I2","2":"S","3":"D1","4":"D2","5":"O","6":"S2"}' \
-		--set_font_size 16 \
-		> /dev/null
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME)
+#	/usr/local/webots/webots-controller --stdout-redirect $(NAME) &
+#	sleep 1
+#	cd $(VIZ_DIR); \
+# 	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
+#     	-n $(NET) --show_spike_count --set_num_screen_shot 0 \
+#		--use_name_neuron \
+#		'{"0":"I1","1":"I2","2":"S","3":"D1","4":"D2","5":"O","6":"S2"}' \
+#		--set_font_size 16 \
+#		> /dev/null
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
