--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -68,6 +68,12 @@ runsnn:
 		--set_font_size 16 \
 		> /dev/null
 
+runnewsnn:
+	cp ../../plugins/physics/newsnn/libnewsnn.so \
+		../../plugins/physics/custom/libcustom.so
+	webots ../../worlds/simple.wbt &
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME) 
+
 ### Do not modify: this includes Webots global Makefile.include
 null :=
 space := $(null) $(null)
